--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "reset": "npx rimraf ./**/node_modules",
     "dev": "modern dev",
     "build": "modern build",
+    "copy-index-html": "cp ./dist/html/main/index.html ./dist/index.html",
     "start": "modern start",
     "serve": "modern serve",
     "new": "modern new",
@@ -25,23 +26,33 @@
     "dist/"
   ],
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
+    "@modern-js/plugin-garfish": "2.46.1",
     "@modern-js/runtime": "2.46.1",
+    "framer-motion": "^11.0.3",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
+    "@modern-js-app/eslint-config": "2.46.1",
     "@modern-js/app-tools": "2.46.1",
     "@modern-js/eslint-config": "2.46.1",
     "@modern-js/tsconfig": "2.46.1",
-    "@modern-js-app/eslint-config": "2.46.1",
-    "typescript": "~5.0.4",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
     "@types/react-dom": "~18.0.10",
-    "lint-staged": "~13.1.0",
-    "prettier": "~2.8.1",
     "husky": "~8.0.1",
-    "rimraf": "~3.0.2"
+    "lint-staged": "~13.1.0",
+    "postcss": "^8.4.33",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "~2.8.1",
+    "rimraf": "~3.0.2",
+    "typescript": "~5.0.4"
   }
 }
