--- a/package.json
+++ b/package.json
@@ -1,58 +1,50 @@
 {
-  "name": "modernjs-devtools",
-  "version": "0.1.0",
+  "name": "dev-tools",
+  "version": "1.0.0",
   "scripts": {
-    "reset": "npx rimraf ./**/node_modules",
-    "dev": "modern dev",
-    "build": "modern build",
-    "copy-index-html": "cp ./dist/html/main/index.html ./dist/index.html",
-    "start": "modern start",
-    "serve": "modern serve",
-    "new": "modern new",
-    "lint": "modern lint",
-    "prepare": "husky install",
-    "upgrade": "modern upgrade"
+    "build": "webpack --mode production && echo \"HIT HERE\" && npm run tar",
+    "build:dev": "webpack --mode development",
+    "build:start": "cd dist && PORT=3000 npx serve",
+    "start": "webpack serve --open --mode development",
+    "start:live": "webpack serve --open --mode development",
+    "tar": "tar czvf dist/dev_tools-dts.tgz -C .wp_federation/ dev_tools"
   },
-  "engines": {
-    "node": ">=16.18.1"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,mjs,cjs}": [
-      "node --max_old_space_size=8192 ./node_modules/eslint/bin/eslint.js --fix --color --cache --quiet"
-    ]
-  },
-  "eslintIgnore": [
-    "node_modules/",
-    "dist/"
-  ],
-  "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.1.1",
-    "@modern-js/plugin-garfish": "2.46.1",
-    "@modern-js/runtime": "2.46.1",
-    "framer-motion": "^11.0.3",
-    "react": "~18.2.0",
-    "react-dom": "~18.2.0"
+  "license": "MIT",
+  "author": {
+    "name": "Jack Herrington",
+    "email": "jherr@pobox.com"
   },
   "devDependencies": {
-    "@modern-js-app/eslint-config": "2.46.1",
-    "@modern-js/app-tools": "2.46.1",
-    "@modern-js/eslint-config": "2.46.1",
-    "@modern-js/tsconfig": "2.46.1",
-    "@types/jest": "~29.2.4",
-    "@types/node": "~16.11.7",
-    "@types/react": "~18.0.26",
-    "@types/react-dom": "~18.0.10",
-    "husky": "~8.0.1",
-    "lint-staged": "~13.1.0",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@module-federation/fmr": "^0.0.7",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.3.0",
+    "dotenv-webpack": "^8.0.1",
+    "dts-loader": "^0.1.8",
+    "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.4.33",
-    "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
-    "prettier": "~2.8.1",
-    "rimraf": "~3.0.2",
-    "typescript": "~5.0.4"
+    "postcss-loader": "^8.1.0",
+    "style-loader": "^3.3.0",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3",
+    "webpack": "^5.57.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "clsx": "^2.1.0",
+    "react": "^18.2.0",
+    "react-aria-components": "^1.0.1",
+    "react-dom": "^18.2.0",
+    "tailwindcss-react-aria-components": "^1.0.0"
   }
 }
