--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "webpack --mode production && echo \"HIT HERE\" && npm run tar",
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
-    "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development",
+    "start": "webpack serve --mode development",
+    "start:live": "webpack serve --mode development",
     "tar": "tar czvf dist/dev_tools-dts.tgz -C .wp_federation/ dev_tools"
   },
   "license": "MIT",
