--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dev-tools",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --mode production && echo \"HIT HERE\" && npm run tar",
+    "build": "webpack --mode production && npm run tar",
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
     "start": "webpack serve --mode development",
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@scottbenton/apps-build": "^1.0.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@scottbenton/apps-config": "^1.0.4",
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.1",
