--- a/package.json
+++ b/package.json
@@ -6,45 +6,32 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
     "start": "webpack serve --mode development",
-    "start:live": "webpack serve --mode development"
+    "lint": "eslint ./src/ --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint ./src/ --ext .js,.jsx,.ts,.tsx --fix"
   },
   "license": "MIT",
   "author": {
-    "name": "Jack Herrington",
-    "email": "jherr@pobox.com"
+    "name": "Scott Benton",
+    "email": "scott@scottbenton.dev"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.10.4",
-    "@scottbenton/apps-build": "^1.2.3",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@scottbenton/apps-build": "^1.4.2",
     "autoprefixer": "^10.4.17",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.3.0",
-    "dotenv-webpack": "^8.0.1",
-    "dts-loader": "^0.1.8",
-    "html-webpack-plugin": "^5.3.2",
-    "postcss": "^8.4.33",
-    "postcss-loader": "^8.1.0",
-    "style-loader": "^3.3.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.3.1"
+    "tailwindcss-react-aria-components": "^1.0.0"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@scottbenton/apps-config": "^1.2.0",
     "clsx": "^2.1.0",
-    "react": "^18.2.0",
-    "react-aria-components": "^1.0.1",
-    "react-dom": "^18.2.0",
-    "tailwindcss-react-aria-components": "^1.0.0"
+    "react-aria-components": "^1.0.1"
+  },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet-async": "2.0.4",
+    "react-router-dom": "6.22.0",
+    "react-singleton-context": "1.0.5"
   }
 }
